--- a/front/src/app/home/page.module.css
+++ b/front/src/app/home/page.module.css
@@ -107,6 +107,30 @@
   border-radius: 1rem;
 }
 
-#mensajes strong {
-  color: #fff;
+/*#mensajes strong {
+  color: #000000;
+}*/
+.mensajeDerecha {
+  color: #000000;
+  text-align: right;
+  background: #dcf8c6;
+  margin-left: 40%;
+  border-radius: 10px 0 10px 10px;
+  padding: 8px;
+  margin-bottom: 4px;
+}
+
+.mensajeIzquierda {
+  color: #000000;
+  text-align: left;
+  background: #fff;
+  margin-right: 40%;
+  border-radius: 0 10px 10px 10px;
+  padding: 8px;
+  margin-bottom: 4px;
+}
+.mensajesLista {
+  list-style: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
 }
